[project]
name = "store-sales"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "chronos-forecasting>=2.2.2",
  "torch>=2.9.1",
  "ipykernel>=7.1.0",
  "polars>=1.37.1",
  "matplotlib>=3.10.8",
  "pyarrow>=22.0.0",
  "pandas>=2.3.3",
  "prophet>=1.2.1",
 ]

